<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderingFromXml="true">

    <Preference android:title="@string/repl" android:summary="@string/repl_summary">
        <intent android:targetPackage="@string/app_id"
            android:targetClass="com.chaquo.python.demo.ReplActivity"/>
    </Preference>

    <Preference android:title="@string/ui_demo" android:summary="@string/ui_demo_summary">
        <intent android:targetPackage="@string/app_id"
            android:targetClass="chaquopy.demo.ui_demo.UIDemoActivity"/>
    </Preference>

    <Preference android:title="@string/java_demo" android:summary="@string/java_demo_summary">
        <intent android:targetPackage="@string/app_id"
            android:targetClass="com.chaquo.python.demo.JavaDemoActivity"/>
    </Preference>

    <Preference android:title="@string/java_unit_test">
        <intent android:targetPackage="@string/app_id"
            android:targetClass="com.chaquo.python.demo.JavaTestActivity"/>
    </Preference>

    <Preference android:title="@string/python_unit_test">
        <intent android:targetPackage="@string/app_id"
            android:targetClass="com.chaquo.python.demo.PythonTestActivity"/>
    </Preference>

</PreferenceScreen>